			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

16-Nov-2001
~~~~~~~~~~~
With Gtk+-2.0 and the 'Unique windows' option on, reshow the existing window
instead of destroying it and creating a new one (suggested by Greg Spath).

15-Nov-2001
~~~~~~~~~~~
Changes to the French translation (Thierry Godefroy and Vincent Lefevre).

14-Nov-2001
~~~~~~~~~~~
Code tidying in menu.c (Bernard Jungen).

13-Nov-2001
~~~~~~~~~~~
Opening a filer window from the Set Icon dialog turns thumbnails display
on (suggested by Francesco Bochicchio).
Right-clicking the Help toolbar button reuses the same window.

12-Nov-2001
~~~~~~~~~~~
Made some strings easier to translate, fixed a problem with translating a blank
string, and changed the details toolbar button to leave the size alone (Andras
Mohari).
Improved key handling (key presses were sometimes ignored).
Bugfix: A very long and narrow icon could make the filer try to scale to a
	width or height of zero (Andras Mohari).

09-Nov-2001
~~~~~~~~~~~
Allow current directory and selection to be stored with Ctrl+[0-9] and
retrieved by pressing [0-9] (suggested by Jakub Turski). The groups are not
saved yet.

08-Nov-2001
~~~~~~~~~~~
Don't use re_set_syntax() on systems that don't have it (reported by
Couderc Damien).
In action windows, the a long filename no longer makes the window get wider
(requested by Graham Borland).
Added 'Types' section to the Options window, allowing easy(ish) access
to the MIME-info files, plus a reload button, and icons for MIME-types can
be set from the 'Set Icon...' box (Stephen Watson).

07-Nov-2001
~~~~~~~~~~~
Added a menu to the 'Set Icon...' box which shows all directories currently
used for icons (Francesco Bochicchio).
Fix small error in German translation (Christopher Arndt).
Bugfix: 'New Directory' didn't correctly select the leafname with Gtk+-2.0.

06-Nov-2001
~~~~~~~~~~~
Added Spanish translation (Marcelo Ramos).
Applied Bernard Jungen's latest patch: