@@ -2,6 +2,11 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+21-Nov-2001
+~~~~~~~~~~~
+If a panel applet quits then it is removed from the panel, instead of being
+replaced by a Restart button.
+
 16-Nov-2001
 ~~~~~~~~~~~
 With Gtk+-2.0 and the 'Unique windows' option on, reshow the existing window
